#1064: The setters generated for the array fields cause NPE if the passed in array was null
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>